# Network-Programming

./: .gitignore
Course Work/data-com/: DKØ3 - TCP og TLS.docx  DKØ4 - IP og Nettlaget.docx  exercise-1.docx  exercise-2.docx
Course Work/data-com/e1/: exercise-1.docx  ~$ercise-1.docx
Course Work/net-prog/e1/: e1  e1-2  e1.cpp
Course Work/net-prog/e1/e1.dSYM/Contents/Resources/DWARF/: e1
Course Work/net-prog/e1/e1.dSYM/Contents/Resources/Relocations/aarch64/: e1.yml
Course Work/net-prog/e2/: e2  e2.cpp
Course Work/net-prog/e3/: CMakeCache.txt  CMakeLists.txt  Makefile  await.cpp  callbacks  callbacks.cpp  cmake_install.cmake
Div/: hello
Lecture Tasks/: cond-var.cpp
Notes/: Kryptografi og sikker kommunikasjon - 21.01.2025.md  Transportlaget.md
data-com/Course Work/: DKØ4 - IP og Nettlaget.docx  DKØ5 - Nettverkslaget del 2.docx
data-com/Div/: hello.cpp
data-com/Notes/: Nettverkslaget og IP - 28.01.2025.md  Nettverkslaget og ruting.md
net-prog/Course Work/e1/: e1  e1-2.cpp  e1.cpp
net-prog/Course Work/e3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  await.cpp  await.vcxproj  await.vcxproj.filters  callbacks.cpp  callbacks.vcxproj  callbacks.vcxproj.filters  cmake_install.cmake  e3.sln
net-prog/Course Work/e4/: CMakeLists.txt  LICENSE  README.md  task.html  tls.cpp  udp.cpp
net-prog/Course Work/e4/task_files/: github-f4d857cbc96a.css  global-8215aa0ce496.css  light_colorblind-af6c685139ba.css  light_high_contrast-578cdbc8a5a9.css  light_tritanopia-5cb699a7e247.css
net-prog/Course Work/e5/code-runner/backend/: pom.xml
net-prog/Course Work/e5/code-runner/backend/src/main/java/no/ntnu/idi/compiler/: CompilerApplication.java
net-prog/Course Work/e5/code-runner/backend/src/main/resources/: application.properties
net-prog/Course Work/e5/code-runner/backend/src/test/java/no/ntnu/idi/calculator/: CalculatorApplicationTests.java
net-prog/Course Work/e5/code-runner/backend/src/test/java/no/ntnu/idi/compiler/: CalculatorApplicationTests.java  Program.java  hello.c  hello.py
net-prog/Course Work/e5/code-runner/frontend/: README.md  package-lock.json  package.json
net-prog/Course Work/e5/code-runner/frontend/src/: App.vue  main.js
net-prog/Course Work/e5/code-runner/frontend/src/components/: CodeRunner.vue
net-prog/Course Work/e5/code-runner/frontend/src/stores/: compilerStore.js
net-prog/Course Work/e6/: index.html  webserver.js  websocket.js
(+7 files in other folders)
